# klebs-general

./: .gitignore  Cargo.toml  Makefile  README.md
abbreviation-trait/: Cargo.toml  README.md
abbreviation-trait/src/: lib.rs
africa/: Cargo.toml  README.md
africa/docs/: outline
africa/src/: abbreviation.rs  africa.rs  country.rs  error.rs  impl_serde.rs  imports.rs  lib.rs
ai-descriptor/: Cargo.toml  Makefile  README.md
ai-descriptor-derive/: Cargo.toml  README.md  all.rs
ai-descriptor-derive/src/: find_ai_attr.rs  find_feature_if_none.rs  get_option_inner_type.rs  has_ai_display.rs  impl_item_feature.rs  impl_item_feature_enum.rs  impl_item_feature_struct.rs  imports.rs  is_option_type.rs  item_with_feature.rs  item_with_features.rs  lib.rs  process_field.rs  process_variant.rs
ai-descriptor-derive/tests/: ui.rs
ai-descriptor-trait/: Cargo.toml  README.md
ai-descriptor-trait/src/: lib.rs
ai-descriptor/docs/: todo
ai-descriptor/src/: derive_ai_descriptor_for_enum.rs  derive_ai_descriptor_for_struct.rs  extract_field_names.rs  generate_ai_descriptor_impl.rs  generate_display_impl.rs  generate_field_ai_idents.rs  generate_field_bindings.rs  generate_field_patterns_for_unnamed_fields.rs  generate_format_string_for_variant.rs  generate_named_field_ai_idents.rs  generate_named_field_bindings.rs  generate_named_field_format_string.rs  generate_unit_variant_arm.rs  generate_variant_arm.rs  generate_variant_arm_for_named_fields.rs  generate_variant_arm_for_unnamed_fields.rs  generate_variant_arms.rs  has_ai_display_attribute.rs  has_display_attribute.rs  has_display_in_attribute.rs  imports.rs  is_ai_attribute_with_display.rs  is_display_attribute.rs  is_option_type.rs  lib.rs
ai-generate-readme/: Cargo.toml
ai-generate-readme/src/: command.rs  create_query_batches.rs  errors.rs  imports.rs  lib.rs  main.rs
async-try-from/: Cargo.toml  Makefile  README.md
async-try-from/examples/: basic_usage.rs
async-try-from/src/: lib.rs
australia-oceania-antarctica/: Cargo.toml
australia-oceania-antarctica/src/: abbreviation.rs  aoa.rs  country.rs  error.rs  impl_serde.rs  imports.rs  lib.rs
backoff-macro/: CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md
backoff-macro/src/: extract_error_type.rs  extract_output_type.rs  imports.rs  lib.rs
backoff-macro/tests/: backoff_macro_multiple_errors_tests.rs  backoff_macro_tests.rs  dummy_errors.rs
batch-mode/: Cargo.toml  Makefile  todo
batch-mode/agent-coordinate/: Cargo.toml  README.md
batch-mode/ai-json-template/: Cargo.toml  README.md
batch-mode/ai-json-template-derive/: Cargo.toml  README.md
batch-mode/batch-mode/: Cargo.toml  README.md
batch-mode/batch-mode-3p/: Cargo.toml  README.md  build.rs
batch-mode/batch-mode-batch-client/: Cargo.toml  README.md  mock_error_1.json  mock_error_9999.json  mock_output_2.json  mock_output_9999.json
batch-mode/batch-mode-batch-error/: Cargo.toml  README.md
batch-mode/batch-mode-batch-executor/: Cargo.toml  README.md
batch-mode/batch-mode-batch-index/: Cargo.toml  README.md
batch-mode/batch-mode-batch-metadata/: Cargo.toml  README.md
batch-mode/batch-mode-batch-reconciliation/: Cargo.toml  README.md  error.json  input_only.json  mock_metadata_42.json  mock_metadata_9999.json
batch-mode/batch-mode-batch-schema/: Cargo.toml  README.md
batch-mode/batch-mode-batch-scribe/: Cargo.toml  README.md
batch-mode/batch-mode-batch-triple/: Cargo.toml  README.md  mock_input_888a6252-5d6b-47dd-8a18-669d9b40f8eb.json
batch-mode/batch-mode-batch-workflow/: Cargo.toml  README.md
batch-mode/batch-mode-batch-workspace/: Cargo.toml  README.md
batch-mode/batch-mode-batch-workspace-interface/: Cargo.toml  README.md
batch-mode/batch-mode-json/: Cargo.toml  README.md
batch-mode/batch-mode-process-response/: Cargo.toml  README.md  dummy_output.json  test_error.json
batch-mode/batch-mode-token-expander/: Cargo.toml  README.md
batch-mode/batch-mode-token-expansion-axis/: Cargo.toml  README.md
batch-mode/batch-mode-token-expansion-axis-derive/: Cargo.toml  README.md
batch-mode/batch-mode-token-expansion-step/: Cargo.toml  README.md
batch-mode/batch-mode-token-expansion-traits/: Cargo.toml  README.md
batch-mode/camel-case-token-with-comment/: Cargo.toml  README.md
batch-mode/instructed-language-model-at-coordinate/: Cargo.toml  README.md
batch-mode/language-model-batch-workflow-derive/: Cargo.toml  README.md
batch-mode/language-model-batch-workflow-json-output-derive/: Cargo.toml  README.md
batch-mode/language-model-format-instructions/: Cargo.toml  README.md
batch-mode/language-model-token-expander/: Cargo.toml  README.md
batch-mode/language-model-type/: Cargo.toml  README.md  REAMDE.md
batch-mode/save-load-derive/: Cargo.toml  README.md
batch-mode/save-load-traits/: Cargo.toml  README.md
batch-mode/u/: add-dep-to-target-crates  add-files-to-librs  create-workspace-crate  name-all-files  shatter
birthday-struct/: Cargo.toml  README.md
birthday-struct/src/: age.rs  birthday.rs  days_until.rs  greeting.rs  imports.rs  lib.rs  zodiac.rs
central-america/: Cargo.toml  README.md
central-america/docs/: outline
central-america/src/: abbreviation.rs  central_america.rs  country.rs  error.rs  impl_serde.rs  imports.rs  (+1 more)
count-invert/: Cargo.toml  LICENSE  README.md
country/: Cargo.toml  README.md
crate-activity/: Cargo.toml  Makefile  README.md
credit-card/: Cargo.toml  Makefile
disable-macro/: Cargo.toml  LICENSE  README.md
error-tree/: CONTRIBUTING.md  Cargo.toml  README.md
europe/: Cargo.toml  README.md
export-magic/: Cargo.toml  LICENSE  README.md
file-downloader/: Cargo.toml  README.md
file-downloader-derive/: Cargo.toml  Makefile  README.md
find-matching-bracket/: Cargo.toml  LICENSE  Makefile  README.md
form-of-joke-humor/: Cargo.toml  README.md
fs-shorthand/: Cargo.toml
gather-all-code-from-crates/: Cargo.toml  Makefile  README.md
gpt-batch-executor/: Cargo.toml  Makefile
gpt-batch-scribe/: Cargo.toml  README.md
hydro2/: Cargo.toml  Makefile
json-misunderstanding/: Cargo.toml  Makefile  all
(+2622 files in other folders)
