[package]
edition = "2024"
name = "abbreviation-trait"
version = "0.2.0"
description = "This crate provides the Abbreviation and TryFromAbbreviation traits, common in the north-america, europe, south-america, etc crates"
authors = [ "klebs tpk3.mx@gmail.com" ]
license = "MIT"
keywords = ["traitw", "shorthand", "reuse"]
repository = "https://github.com/klebs6/klebs-general"
categories = ["development-tools"]


