[package]
name          = "africa"
version       = "0.5.0"
authors       = [ "klebs tpk3.mx@gmail.com" ]
categories    = ["internationalization"]
description   = "A Rust crate providing enums and conversions for African countries and their subregions, analogous to the Europe crate."
documentation = "https://docs.rs/africa"
edition       = "2024"
keywords      = ["africa", "geography", "countries", "regions", "rust"]
license       = "MIT"
readme        = "README.md"
repository    = "https://github.com/klebs6/klebs-general"

[dependencies]
abbreviation-trait     = "0.3.0"
serde                  = { version = "1.0", features  = ["derive"] }
export-magic           = "0.3.6"
strum                  = { version = "0.24", features = ["derive"] }
strum_macros           = "0.24"
serde_json             = { version = "1" }
thiserror              = "2.0.6"
once_cell              = "1.20.2"
country                = "0.5.0"
language-enum          = "0.2.0"
error-tree             = "0.6.0"
file-downloader        = "0.2.0"
osmpbf-file-downloader-derive = "0.2.0"

[features]
serde_abbreviation = []
