[package]
name = "ai-descriptor-trait"
version = "0.3.0"
edition = "2021"

authors       = [ "klebs tpk3.mx@gmail.com" ]
description   = "Provides an interface for the proc macro we can use to annotate enums for facilitating itemization and description using an AI model"
license       = "MIT OR Apache-2.0"
repository    = "https://github.com/klebs6/klebs-general"
homepage      = "https://github.com/klebs6/klebs-general"
documentation = "https://docs.rs/ai-descriptor"
readme        = "README.md"
keywords      = ["ai", "enums", "simulation", "ergonomics"]
categories    = ["game-development", "simulation", "rust-patterns"]

[dependencies]
str-shorthand = {version = "*", path = "/Users/kleb/bethesda/work/repo/klebs-general/str-shorthand" }
tracing                     = { version = "0.1.41", features      = ["log"] }
tracing-setup               = "1.0.4"
tracing-subscriber          = { version = "0.3.19", default-features = false, features                                                = ["fmt", "std", "env-filter", "json"] }
