[workspace]
members = [ "save-load-traits", "batch-mode-3p", "batch-mode-batch-client", "batch-mode-batch-executor", "batch-mode-batch-index", "batch-mode-batch-metadata", "batch-mode-batch-reconciliation", "batch-mode-batch-schema", "batch-mode-batch-triple", "batch-mode-batch-workspace", "batch-mode-batch-workspace-interface", "batch-mode-json", "camel-case-token-with-comment", "batch-mode", "batch-mode-process-response", "batch-mode-batch-workflow", "batch-mode-token-expansion-axis-derive", "batch-mode-token-expansion-step", "batch-mode-token-expansion-axis", "batch-mode-token-expander", "agent-coordinate", "language-model-format-instructions", "batch-mode-batch-scribe", "language-model-type", "batch-mode-batch-error", "language-model-batch-workflow-derive", "language-model-token-expander" ]
resolver = "3"