[workspace]
members = [ "agent-coordinate", "ai-json-template", "ai-json-template-derive", "batch-mode", "batch-mode-3p", "batch-mode-batch-client", "batch-mode-batch-error", "batch-mode-batch-executor", "batch-mode-batch-index", "batch-mode-batch-metadata", "batch-mode-batch-reconciliation", "batch-mode-batch-schema", "batch-mode-batch-scribe", "batch-mode-batch-triple", "batch-mode-batch-workflow", "batch-mode-batch-workspace", "batch-mode-batch-workspace-interface", "batch-mode-json", "batch-mode-process-response", "batch-mode-token-expansion-axis-derive", "batch-mode-token-expansion-step", "batch-mode-token-expansion-traits", "camel-case-token-with-comment", "language-model-batch-workflow-derive", "language-model-token-expander", "language-model-type", "save-load-derive", "save-load-traits", "instructed-language-model-at-coordinate" ]
resolver = "3"
