[workspace]
members = [ 
    "agent-coordinate", 
    "ai-json-template", 
    "ai-json-template-derive", 
    "batch-mode", 
    "batch-mode-3p", 
    "batch-mode-batch-client", 
    "batch-mode-batch-error", 
    "batch-mode-batch-executor", 
    "batch-mode-batch-index", 
    "batch-mode-batch-metadata", 
    "batch-mode-batch-reconciliation", 
    "batch-mode-batch-schema", 
    "batch-mode-batch-scribe", 
    "batch-mode-batch-triple", 
    "batch-mode-batch-workflow", 
    "batch-mode-batch-workspace", 
    "batch-mode-batch-workspace-interface", 
    "batch-mode-json", 
    "batch-mode-process-response", 
    "batch-mode-token-expansion-axis-derive", 
    "batch-mode-token-expansion-step", 
    "batch-mode-token-expansion-traits", 
    "camel-case-token-with-comment", 
    "instructed-language-model-at-coordinate",
    "language-model-batch-workflow-derive", 
    "language-model-token-expander", 
    "language-model-type", 
    "save-load-derive", 
    "save-load-traits", 
]

resolver = "3"

[workspace.dependencies]
Inflector                = "0.11.4"
ai-descriptor            = "0.9.0"
async-openai             = "0.27.2"
async-trait              = "0.1.86"
bytes                    = "1.10.0"
crossbeam                = "0.8.4"
delegate                 = "0.13.2"
derive_builder           = "0.20.2"
disable_macro            = "0.3.6"
error-tree               = "0.6.0"
export-magic             = "0.3.6"
float-ord                = "0.3.2"
futures                  = "0.3"
getset                   = "0.1.4"
indoc                    = "2.0.6"
json-repair              = "0.4.0"
json5                    = "0.4.1"
lazy_static              = "1.5.0"
named-item               = "0.6.0"
named-item-derive        = "0.2.0"
num-traits               = "0.2.19"
once_cell                = "1.20.3"
pbx                      = "0.1.0"
pretty_assertions        = "1.4.1"
proc-macro2              = "1.0"
quote                    = "1.0"
rand                     = "0.9.0"
rand-construct           = "0.10.0"
regex                    = "1.11.1"
scan-crate-for-typedefs  = "0.8.1"
serde_derive             = "1.0"
serde_json               = "1.0"
strsim                   = "0.10"
structopt                = "0.3.26"
structured-language-form = "0.3.0"
strum_macros             = "0.24"
tempfile                 = "3.17.1"
traced-test              = "1.0.2"
tracing-setup            = "1.0.2"
trybuild                 = "1.0.104"

serde                    = { version = "1.0",    features = ["derive"] }
strum                    = { version = "0.24",   features = ["derive"] }
syn                      = { version = "2.0",    features = [ "parsing", "full" ] }
tokio                    = { version = "1",      features = ["full"] }
tracing                  = { version = "0.1.40", features = ["log"] }
tracing-subscriber       = { version = "0.3",    features = ["fmt", "std", "env-filter"], default-features = false }
uuid                     = { version = "1.14.0", features = ["v4", "serde"] }
