[package]
edition = "2021"
name = "birthday-struct"
version = "0.1.0"
repository = "https://github.com/klebs6/klebs-general"
authors = [ "klebs <tpk3.mx@gmail.com>" ]
license = "MIT"
description = "A crate for representing and manipulating birthdays, with support for time zones, age calculations, and integration with zodiac signs."
documentation = "https://docs.rs/birthday-struct"
readme = "README.md"
keywords = ["birthday", "storefront", "datetime", "zodiac", "age"]
categories = ["date-and-time"]
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

[dependencies]
serde_derive = "1.0.216"
export-magic = "0.3.6"
zodiac-sign = "0.1.0"
derive_builder = "0.20.2"
getset = "0.1.3"
chrono = "0.4.39"
serde_json = "1.0.133"
language-enum = "0.1.0"
chrono-tz = { version = "0.10.0", features = ["serde"] }

[dependencies.serde]
version = "1.0.216"
features = ["derive"]

