[package]
authors       = [ "klebs tpk3.mx@gmail.com" ]
categories    = ["internationalization"]
description   = "A Rust crate providing enums and conversions for Central American countries and their subregions, analogous to the asia and europe crates."
documentation = "https://docs.rs/central-america"
edition       = "2024"
keywords      = ["central-america", "geography", "countries", "regions", "rust"]
license       = "MIT"
name          = "central-america"
readme        = "README.md"
repository    = "https://github.com/klebs6/klebs-general"
version       = "0.2.0"

[dependencies]
abbreviation-trait = "0.1.0"
serde         = { version = "1.0", features = ["derive"] }
export-magic  = "0.3.6"
strum         = { version = "0.24", features = ["derive"] }
strum_macros  = "0.24"
serde_json    = { version = "1" }
thiserror     = "2.0.6"
once_cell     = "1.20.2"
country       = "0.5.0"
language-enum = "0.2.0"

[features]
serde_abbreviation = []
