[package]
name = "file-downloader-derive"
version = "0.1.0"
edition = "2024"

description = "This crate lets us use FileDownloader derive macro. We can use it to facilitate flexible downloading of files."
authors = [ "klebs tpk3.mx@gmail.com" ]
license = "MIT"
keywords = ["download", "checksum", "MD5"]
repository = "https://github.com/klebs6/klebs-general"
categories = ["network-programming"]

[dependencies]
syn = { version = "2.0.52", features = ["full", "parsing"] }
derive-error = "0.0.5"
export-magic = "0.3.1"
quote = "1.0"
proc-macro2 = "1.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "std", "env-filter"] }

[dev-dependencies]
serde_json = "1.0.133"
uuid       = "1.11.0"
trybuild = "1"
file-downloader = "0.1.0"

[lib]
proc-macro = true
