[package]
name          = "file-downloader"
version       = "0.1.0"
edition       = "2024"
authors       = [ "klebs tpk3.mx@gmail.com" ]
description   = "A Rust library to download and verify files, including MD5 checksum verification."
documentation = "https://docs.rs/file_downloader"
readme        = "README.md"
keywords      = ["file", "download", "checksum", "MD5"]
license       = "MIT"
repository    = "https://github.com/klebs6/klebs-general"
categories    = ["network-programming"]

[dependencies]
async-trait   = "0.1.83"
tokio         = { version = "1.42.0", features = ["full"] }
md5           = "0.7.0"
error-tree    = "0.6.0"
tracing       = "0.1.41"
export-magic  = "0.3.6"
reqwest       = { version = "0.12", features   = ["blocking", "json", "stream"] }
futures-util  = "0.3"

[dev-dependencies]
httpmock      = "0.7.0"
tempfile      = "3.14.0"
tracing-setup = "1.0.2"
