[package]
name          = "form-of-joke-humor"
version       = "0.1.0"
edition       = "2021"
authors       = [ "klebs tpk3.mx@gmail.com" ]
description   = "A Rust crate for representing and working with various forms of jokes and humor."
license       = "MIT OR Apache-2.0"
repository    = "https://github.com/klebs6/klebs-general"
homepage      = "https://github.com/klebs6/klebs-general"
documentation = "https://docs.rs/form-of-joke-humor"
readme        = "README.md"
keywords      = ["humor", "jokes", "wordplay", "literature", "text"]
categories    = ["text-processing", "data-structures"]

[dependencies]
rand-construct = "0.10.0"
export-magic   = "0.3.6"
rand           = "0.8.5"
serde          = { version = "1.0", features = ["derive"] }
serde_json     = "1.0"
ai-descriptor  = "0.9.0"
