[package]
name = "fs-shorthand"
version = "0.1.0"
edition = "2021"

description = "Provides a set of filesystem utility functions."
authors = [ "klebs tpk3.mx@gmail.com" ]
license = "MIT"
keywords = ["shorthand", "filesystem" ]
repository = "https://github.com/klebs6/klebs-general"
categories = ["development-tools"]

[dependencies]
export-magic = "*"
