[package]
name = "gather-all-code-from-crates"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gather-all-code-from-crates"
path = "src/main.rs"

[dependencies]
structopt = "0.3.26"
serde_json = "1.0.133"
derive_builder = "0.20.2"
getset = "0.1.3"
ra_ap_syntax = "0.0.248"
serde = { version = "1.0.216", features = ["derive"] }
export-magic = "0.3.6"
tempfile = "3.14.0"
tracing = "0.1.41"
tracing-setup = "1.0.2"
traced-test = "1.0.2"
