[package]
name = "gather-all-code-from-crates"
version = "0.1.0"
edition = "2021"
description = "a Rust crate designed to extract, filter, and reconstruct code elements from Rust projects. It provides a flexible and configurable toolset for analyzing and processing Abstract Syntax Trees (ASTs) of Rust code, with options to include or exclude specific elements based on user-defined criteria."
authors = [ "klebs tpk3.mx@gmail.com" ]
license = "MIT"
keywords = ["syntax", "crates", "preprocessing", "ai", "queries"]
repository = "https://github.com/klebs6/klebs-general"
categories = ["development-tools"]

[[bin]]
name = "gather-all-code-from-crates"
path = "src/main.rs"

[dependencies]
structopt      = "0.3.26"
serde_json     = "1.0.133"
derive_builder = "0.20.2"
getset         = "0.1.3"
ra_ap_syntax   = "0.0.248"
serde          = { version = "1.0.216", features = ["derive"] }
export-magic   = "0.3.6"
tempfile       = "3.14.0"
tracing        = "0.1.41"
tracing-setup  = "1.0.2"
traced-test    = "1.0.2"
