[package]
name = "gpt-batch-executor"
version = "0.1.0"
edition = "2021"

[dependencies]
gpt-batch-scribe = { version = "*", path = "../gpt-batch-scribe" }
async-openai = "*"
export-magic = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
