[package]
name = "gpt-batch-scribe"
version = "0.1.0"
edition = "2021"

description = "contains the GptBatchAPIRequest struct which helps create gpt4 batch requests."
authors     = [ "klebs tpk3.mx@gmail.com" ]
license     = "MIT"
keywords    = ["shorthand", "ai", "gpt", "openai", "api"]
repository  = "https://github.com/klebs6/klebs-general"
categories = ["template-engine", "text-processing", "parsing"]

[dependencies]
export-magic  = "0.3.6"
error-tree    = "0.3.6"
traced-test   = "0.3.6"
tracing-setup = "0.3.6"

serde              = { version = "1.0", features = [ "rc", "derive" ] }
serde_json         = { version = "1.0" }
async-openai       = "0.23.3"
tracing            = "0.1.40"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "std", "env-filter"] }
